cleaned up excessive css, working on figuring out html content jumping issues

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -2,133 +2,39 @@
   position: relative;
   display: flex;
   background-color: $color-primary;
-  height: calc(109vh - 6rem);
+  height: 100vh;
   justify-content: flex-end;
 
-  &__container {
-    flex-direction: row-reverse;
+  .home-header-container {
     margin-right: 35rem;
     margin-top: 25rem;
 
-    &__title {
+    .home-header-title {
        font-size: 9rem;
        color: $color-white;
        font-weight: normal;
 
-       &-name {
+       .home-header-name {
          display: block;
          font-size: 10rem;
          font-weight: bold;
        }
-
     }
 
-   &__button {
-     font-size: 1.8rem;
-     margin-top: 4rem;
-     margin-bottom: 3rem;
-     border-radius: 3rem;
-     padding: 1.2rem 5rem 1.2rem 5rem;
-     box-shadow: 0 1rem 1rem rgba(0,0,0,0.2);
-   }
-
-   &__description-title {
+    .home-header-description {
       font-size: 2.5rem;
       font-weight: lighter;
       color: $color-white;
       margin-top: 2.5rem;
-   }
+    }
 
-   &__socialmedia {
-     display: flex;
-     span {
-       font-size: 1.7rem;
-       text-transform: lowercase;
-       color: $color-lightgrey;
-       letter-spacing: 0.12rem;
-     }
-
-     &-list {
-       font-size: 2rem;
-       color: $color-lightgrey;
-
-       li {
-         display: inline-block;
-         margin-left: 1.5rem;
-       }
-
-       a {
-         color: $color-lightgrey;
-         transition: 0.15s all ease-in;
-
-         &:hover {
-           color: $color-lightergreen;
-         }
-         &:active {
-           color: $color-white;
-         }
-
-       }
-     }
-   }
-
+    .home-header-button {
+      font-size: 1.8rem;
+      margin-top: 4rem;
+      margin-bottom: 3rem;
+      border-radius: 3rem;
+      padding: 1.2rem 5rem 1.2rem 5rem;
+      box-shadow: 0 1rem 1rem rgba(0,0,0,0.2);
+    }
   }
-
- }
-
- .experience-container, .blog-container-article {
-   position: relative;
-   background-color: transparent;
-   height: 90vh;
-   margin: 0 6rem 0 6rem;
-
-   &__inner-container {
-     position: relative;
-     padding: 5rem;
-     width: 100%;
-     height: 100%;
-     background-color: $color-white;
-     top: -6rem;
-     z-index: 1;
-     border: 0;
-     box-shadow: 0 0rem 3rem rgba(0,0,0,0.19), 0 0 0 rgba(0,0,0,0.13);
-     overflow: hidden;
-
-     &__section-title, &-title {
-        font-size: 2rem;
-        margin-bottom: 1rem;
-        font-weight: lighter;
-        text-transform: uppercase;
-     }
-
-     &__header, &__header-secondary {
-      font-size: 5rem;
-     }
-
-     &__current-header, &__previous-header  {
-       font-size: 2rem;
-       text-align: center;
-       margin-top: 4rem;
-     }
-
-     &__previous-header {
-       margin-top: 0;
-     }
-     
-     &__line {
-       display: block;
-       font-size: 2rem;
-       text-align: center;
-     }
-
-     &__line + &__line {
-       position: relative;
-       top: -7px;
-     }
-
-     &__2up-image {
-        width: 74.5%;
-        margin-bottom: 2.5rem;
-     }
-   }
  }
